noinst_LTLIBRARIES = libprotoident_tcp.la
libprotoident_tcp_la_SOURCES = \
	lpi_ares.cc \
	lpi_bitextend.cc \
	lpi_bittorrent.cc \
	lpi_directconnect.cc \
	lpi_dns.cc \
	lpi_eye.cc \
	lpi_flash.cc \
	lpi_ftpcontrol.cc \
	lpi_ftpdata.cc \
	lpi_gnutella.cc \
	lpi_harveys.cc \
	lpi_http_badport.cc \
	lpi_http.cc \
	lpi_http_p2p.cc \
	lpi_https.cc \
	lpi_http_tunnel.cc \
	lpi_ica.cc \
	lpi_id.cc \
	lpi_imap.cc \
	lpi_imaps.cc \
	lpi_irc.cc \
	lpi_msn.cc \
	lpi_mzinga.cc \
	lpi_ncsoft.cc \
	lpi_netbios.cc \
	lpi_nntp.cc \
	lpi_nopayload.cc \
	lpi_pando.cc \
	lpi_pop3.cc \
	lpi_razor.cc \
	lpi_rdp.cc \
	lpi_rfb.cc \
	lpi_rpcscan.cc \
	lpi_rsync.cc \
	lpi_rtsp.cc \
	lpi_shoutcast.cc \
	lpi_sip.cc \
	lpi_smb.cc \
	lpi_smtp.cc \
	lpi_ssh.cc \
	lpi_ssl.cc \
	lpi_steam.cc \
	lpi_telnet.cc \
	lpi_trackmania.cc \
	lpi_warcraft3.cc \
	lpi_yahoo.cc \
	lpi_yahoo_webcam.cc 

AM_CFLAGS=-I"$(top_srcdir)/lib"
AM_CXXFLAGS=-I"$(top_srcdir)/lib"
INCLUDES=@ADD_INCLS@

