noinst_LTLIBRARIES = libprotoident_udp.la
libprotoident_udp_la_SOURCES = \
	lpi_akamai.cc \
	lpi_akamai_transfer.cc \
	lpi_amanda.cc \
	lpi_apple_facetime_init.cc \
	lpi_ares.cc \
	lpi_backweb.cc \
	lpi_battlefield.cc \
	lpi_bjnp.cc \
	lpi_checkpoint_rdp.cc \
	lpi_cirn.cc \
	lpi_cisco_ipsec.cc \
	lpi_cod.cc \
	lpi_dcc.cc \
	lpi_demonware.cc \
	lpi_dhcp.cc \
	lpi_dht_dict.cc \
	lpi_dht_other.cc \
	lpi_diablo2.cc \
	lpi_directconnect.cc \
	lpi_dns.cc \
	lpi_driveshare.cc \
	lpi_emule.cc \
	lpi_emule_weak.cc \
	lpi_epson.cc \
	lpi_eso.cc \
	lpi_esp_encap.cc \
	lpi_eye.cc \
	lpi_fasp.cc \
	lpi_fortinet.cc \
	lpi_freechal.cc \
	lpi_gamespy.cc \
	lpi_garena.cc \
	lpi_gnutella.cc \
	lpi_gnutella2.cc \
	lpi_gnutella_weak.cc \
	lpi_gsm.cc \
	lpi_halflife.cc \
	lpi_hamachi.cc \
	lpi_imesh.cc \
	lpi_ipmsg.cc \
	lpi_ipv6.cc \
	lpi_isakmp.cc \
	lpi_jedi.cc \
	lpi_jedi_academy.cc \
	lpi_kademlia.cc \
	lpi_kaspersky.cc \
	lpi_kazaa.cc \
	lpi_l2tp.cc \
	lpi_lansync.cc \
	lpi_ldap_ad.cc \
	lpi_linkproof.cc \
	lpi_mdns.cc \
	lpi_moh.cc \
	lpi_mp2p.cc \
	lpi_msn_cache.cc \
	lpi_msn_video.cc \
	lpi_msoffice_mac.cc \
	lpi_mta.cc \
	lpi_mystery_05.cc \
	lpi_mystery_0660.cc \
	lpi_mystery_0d.cc \
	lpi_mystery_45.cc \
	lpi_mystery_61_72.cc \
	lpi_mystery_8000.cc \
	lpi_mystery_99.cc \
	lpi_mystery_e9.cc \
	lpi_mystery_qq.cc \
	lpi_netbios.cc \
	lpi_netflow.cc \
	lpi_newerth.cc \
	lpi_nopayload.cc \
	lpi_norton.cc \
	lpi_ntp.cc \
	lpi_nwn.cc \
	lpi_opaserv.cc \
	lpi_orbit.cc \
	lpi_pando.cc \
	lpi_pplive.cc \
	lpi_ppstream.cc \
	lpi_probable_gnutella.cc \
	lpi_psn.cc \
	lpi_pyzor.cc \
	lpi_qq.cc \
	lpi_qqlive.cc \
	lpi_quake.cc \
	lpi_radius.cc \
	lpi_real.cc \
	lpi_roblox.cc \
	lpi_rtcp.cc \
	lpi_rtmfp.cc \
	lpi_rtp.cc \
	lpi_second_life.cc \
	lpi_serialnumberd.cc \
	lpi_sip.cc \
	lpi_skype.cc \
	lpi_slp.cc \
	lpi_snmp.cc \
	lpi_sopcast.cc \
	lpi_spamfighter.cc \
	lpi_spotify_bcast.cc \
	lpi_sql_worm.cc \
	lpi_ssdp.cc \
	lpi_starcraft.cc \
	lpi_steam.cc \
	lpi_steamfriends.cc \
	lpi_steam_localbroadcast.cc \
	lpi_storm_worm.cc \
	lpi_stun.cc \
	lpi_syslog.cc \
	lpi_teamspeak.cc \
	lpi_teamviewer.cc \
	lpi_teredo.cc \
	lpi_tftp.cc \
	lpi_thq.cc \
	lpi_traceroute.cc \
	lpi_tremulous.cc \
	lpi_tvants.cc \
	lpi_unreal.cc \
	lpi_ventrilo.cc \
	lpi_vivox.cc \
	lpi_vxworks_exploit.cc \
	lpi_winmessage.cc \
	lpi_worm_22105.cc \
	lpi_xfire_p2p.cc \
	lpi_xlsp.cc \
	lpi_xunlei.cc \
	lpi_youdao_dict.cc \
	lpi_youku.cc \
	lpi_zeroaccess_udp.cc

EXTRA_DIST=udp_protocols.h

libprotoident_udp_la_CFLAGS=-I"$(top_srcdir)/lib"
libprotoident_udp_la_CPPFLAGS=-I"$(top_srcdir)/lib"
INCLUDES=@ADD_INCLS@

