noinst_LTLIBRARIES = libprotoident_udp.la
libprotoident_udp_la_SOURCES = \
	lpi_360cn.cc \
	lpi_360p2p.cc \
	lpi_aachen_udp.cc \
	lpi_acercloud.cc \
	lpi_akamai.cc \
	lpi_akamai_transfer.cc \
	lpi_amanda.cc \
	lpi_apple_facetime_init.cc \
	lpi_ares.cc \
	lpi_ark.cc \
	lpi_arma_server.cc \
	lpi_arma3_server.cc \
	lpi_assettocorsa.cc \
	lpi_avast_secure_dns.cc \
        lpi_backweb.cc \
        lpi_bacnet.cc \
	lpi_baiduyun_p2p.cc \
	lpi_baofeng_udp.cc \
	lpi_battlefield.cc \
	lpi_bjnp.cc \
	lpi_bmdp.cc \
	lpi_btsync.cc \
	lpi_cacaoweb_udp.cc \
	lpi_canon_mfnp.cc \
	lpi_checkpoint_rdp.cc \
	lpi_chivalry.cc \
	lpi_cirn.cc \
	lpi_cisco_ipsec.cc \
	lpi_cisco_sslvpn.cc \
	lpi_cod.cc \
	lpi_combatarms.cc \
	lpi_combatarms_p2p.cc \
	lpi_crossfire.cc \
	lpi_crossout.cc \
	lpi_csgo.cc \
	lpi_csoriginal.cc \
	lpi_dahua.cc \
	lpi_db2.cc \
	lpi_dcc.cc \
	lpi_demonware.cc \
	lpi_destiny_udp.cc \
	lpi_dhcp.cc \
	lpi_dht_dict.cc \
	lpi_dht_other.cc \
	lpi_diablo2.cc \
	lpi_dianping_udp.cc \
	lpi_dianshijia.cc \
	lpi_directconnect.cc \
	lpi_discord.cc \
	lpi_dns.cc \
	lpi_dota2.cc \
	lpi_doyo.cc \
	lpi_driveshare.cc \
	lpi_dtls.cc \
	lpi_emule.cc \
	lpi_emule_weak.cc \
	lpi_epson.cc \
	lpi_eso.cc \
	lpi_esp_encap.cc \
	lpi_eye.cc \
	lpi_fasp.cc \
	lpi_feitwo.cc \
	lpi_forticlient_sslvpn.cc \
	lpi_fortinet.cc \
	lpi_foscam.cc \
	lpi_freechal.cc \
	lpi_funshion.cc \
	lpi_gamespy.cc \
	lpi_gangsofspace.cc \
	lpi_garena.cc \
	lpi_gearsofwar.cc \
	lpi_gnutella.cc \
	lpi_gnutella2.cc \
	lpi_gnutella_weak.cc \
	lpi_gotomeeting.cc \
	lpi_gprs_tunnel.cc \
	lpi_gsm.cc \
	lpi_h1z1.cc \
	lpi_halflife.cc \
	lpi_haloonline.cc \
	lpi_hamachi.cc \
	lpi_heroes_generals.cc \
	lpi_heliborne.cc \
	lpi_hots.cc \
	lpi_icp.cc \
	lpi_imesh.cc \
	lpi_ipmsg.cc \
	lpi_ipv6.cc \
	lpi_isakmp.cc \
	lpi_jedi.cc \
	lpi_jedi_academy.cc \
	lpi_kademlia.cc \
	lpi_kankan.cc \
	lpi_kaspersky.cc \
	lpi_kazaa.cc \
	lpi_kingofglory_udp.cc \
	lpi_kuguo.cc \
	lpi_l2tp.cc \
	lpi_lansync.cc \
	lpi_ldap_ad.cc \
	lpi_line_udp.cc \
	lpi_linkproof.cc \
	lpi_lol.cc \
	lpi_mdns.cc \
	lpi_merakicloud.cc \
	lpi_moh.cc \
	lpi_moonhunters.cc \
	lpi_mp2p.cc \
	lpi_msn_cache.cc \
	lpi_msn_video.cc \
	lpi_msoffice_mac.cc \
	lpi_mta.cc \
	lpi_mystery_05.cc \
	lpi_mystery_0660.cc \
	lpi_mystery_0d.cc \
	lpi_mystery_45.cc \
	lpi_mystery_61_72.cc \
	lpi_mystery_8000.cc \
	lpi_mystery_99.cc \
	lpi_mystery_e9.cc \
	lpi_mystery_qq.cc \
	lpi_n2ping.cc \
	lpi_natpmp.cc \
	lpi_netbios.cc \
	lpi_netcat_cctv_udp.cc \
	lpi_netcore_scan.cc \
	lpi_netflow.cc \
	lpi_newerth.cc \
	lpi_nintendo.cc \
	lpi_noction.cc \
	lpi_noe.cc \
	lpi_nopayload.cc \
	lpi_norton.cc \
	lpi_ntp.cc \
	lpi_ntp_reflect.cc \
	lpi_nwn.cc \
	lpi_opaserv.cc \
	lpi_openvpn.cc \
	lpi_orbit.cc \
	lpi_overwatch.cc \
	lpi_pando.cc \
	lpi_panipani.cc \
	lpi_planetside2.cc \
	lpi_portmap_rpc.cc \
	lpi_pplive.cc \
	lpi_ppstream.cc \
	lpi_probable_gnutella.cc \
	lpi_ps4_remoteplay.cc \
	lpi_psn.cc \
	lpi_punkbuster.cc \
	lpi_pyzor.cc \
	lpi_qq.cc \
	lpi_qqlive.cc \
	lpi_qqpcmgr.cc \
	lpi_quake.cc \
	lpi_quic.cc \
	lpi_radius.cc \
	lpi_ramseydash.cc \
	lpi_rdp_udp.cc \
	lpi_real.cc \
	lpi_risingstorm.cc \
	lpi_roblox.cc \
	lpi_robocraft.cc \
	lpi_rtcp.cc \
	lpi_rtmfp.cc \
	lpi_rtp.cc \
	lpi_sanandreas_mp.cc \
	lpi_second_life.cc \
	lpi_serialnumberd.cc \
	lpi_sip.cc \
	lpi_skype.cc \
	lpi_slp.cc \
	lpi_smite.cc \
	lpi_snapvpn.cc \
	lpi_snmp.cc \
	lpi_sopcast.cc \
	lpi_spamfighter.cc \
	lpi_spotify_bcast.cc \
	lpi_sql_worm.cc \
	lpi_ssdp.cc \
	lpi_starcitizen.cc \
	lpi_starcraft.cc \
	lpi_starleaf.cc \
	lpi_steam.cc \
	lpi_steamfriends.cc \
	lpi_steam_inhomebroadcast.cc \
	lpi_steam_localbroadcast.cc \
	lpi_storm_worm.cc \
	lpi_stun.cc \
	lpi_syslog.cc \
	lpi_teamspeak.cc \
	lpi_teamviewer.cc \
	lpi_teredo.cc \
	lpi_tf2.cc \
	lpi_tftp.cc \
	lpi_thecrew.cc \
	lpi_thq.cc \
	lpi_torchlight2.cc \
	lpi_traceroute.cc \
	lpi_tremulous.cc \
	lpi_turbovpn.cc \
	lpi_tvants.cc \
	lpi_ubisoft_games.cc \
	lpi_umeye.cc \
	lpi_unreal.cc \
	lpi_ventrilo.cc \
	lpi_viber.cc \
	lpi_vivox.cc \
	lpi_vpnmaster.cc \
	lpi_vpnrobot_udp.cc \
	lpi_vxworks_exploit.cc \
	lpi_warthunder.cc \
	lpi_webex.cc \
	lpi_wechat_udp.cc \
	lpi_winmessage.cc \
	lpi_wolfet.cc \
	lpi_worm_22105.cc \
	lpi_xfire_p2p.cc \
	lpi_xlsp.cc \
	lpi_xunlei.cc \
	lpi_xunlei_jsq.cc \
	lpi_xunyou.cc \
	lpi_youdao_dict.cc \
	lpi_youku.cc \
	lpi_yy_udp.cc \
	lpi_zeroaccess_udp.cc \
	lpi_zoom.cc

EXTRA_DIST=udp_protocols.h

libprotoident_udp_la_CFLAGS=-I"$(top_srcdir)/lib"
libprotoident_udp_la_CPPFLAGS=-I"$(top_srcdir)/lib"
INCLUDES=@ADD_INCLS@

